apps/base/kek-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kek-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kek-app
  template:
    metadata:
      labels:
        app: kek-app
    spec:
      containers:
      - name: kek-app
        image: docker.io/company/my-app
        ports:
        - containerPort: 8080
