apps/base/kek-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kek-app
spec:
  type: ClusterIP
  selector:
    app: kek-app
  ports:
  - port: 80
    targetPort: 8080
