apps/base/kek-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kek-app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kek-app.dev.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kek-app
            port:
              number: 80
